# git-repo-tut

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  game_logic.cpp  main.cpp  readme.md
.github/workflows/: blank.yml  c-cpp.yml  code-quality.yml  deploy.yml  gui-tests.yml  main.yml  mian-ci.yml
GUI/: CMakeLists.txt
GUI/include/: TicTacToeGUI.h
GUI/src/: TicTacToeGUI.cpp  main.cpp
ci_cmake_config/: CMakeLists.txt  cmakefile
core/: CMakeLists.txt
core/include/: AIPlayer.h  GameBoard.h  GameHistory.h  GameStateStack.h  UserManager.h
core/src/: AIPlayer.cpp  GameBoard.cpp  GameHistory.cpp  GameStateStack.cpp  TicTacToeGUI.cpp  UserManager.cpp
cpp/: cpp_main.cpp
include/: AIPlayer.h
src/: AIPlayer.cpp  GameHistory.cpp  UserManager.cpp  main.cpp
tests/: AIPlayer_test.cpp  CMakeLists.txt  IntegrationTests.cpp
tests/unit_tests/: AIPlayer_test.cpp  GameBoard_test.cpp  GameHistory_test.cpp  GameStateStack_test.cpp  UserManager_test.cpp  main.cpp
